--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
 	<script type="text/javascript" src="external/ua-parser.min.js"></script>
 	<script type="text/javascript" src="external/qrcodegen.js"></script>
 	<script type="text/javascript" src="external/ggwave.min.js"></script>
+	<script type="text/javascript" src="external/webrtc-ips.js"></script>
+	<script type="text/javascript" src="external/sdp-transform/grammar.js"></script>
+	<script type="text/javascript" src="external/sdp-transform/parser.js"></script>
+	<script type="text/javascript" src="external/sdp-transform/writer.js"></script>
 	<script type="module" src="js/app.js"></script>
 	<noscript>Enable JavaScript. Localio works only with JavaScript enabled.</noscript>
 </body>
