--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
 	<script>
 		if ('serviceWorker' in navigator) {
-			window.addEventListener('load', () =>
-				navigator.serviceWorker.register('serviceWorker.js', {
-					scope: '/',
-				}),
-			);
+			window.addEventListener('load', function () {
+				navigator.serviceWorker.register('serviceWorker.js')
+					.then((registration) => console.log('ServiceWorker registration successful with scope: ', registration.scope))
+					.catch(err => console.log('ServiceWorker registration failed: ', err))
+			});
 		}
 	</script>
 	<style>
